# ankflag

./: README.md  pyproject.toml
ankflag/data/: ank.yml
ankflag/scripts/: runank.py
ankflag/utils/: ankcopy.py  ankdata.py  convertfits.py  inputs.py  plottingfns.py  resource_utils.py  udocker_utils.py
