[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ankflag"
version = "3.0.0"
description = "A package to perform RFI flagging of radio interferometric data"
readme = { file = "README.md", content-type = "text/markdown" }
license = "MIT"
authors = [
    { name = "Apurba Bera", email = "apurba7777@gmail.com " },
    { name = "Devojyoti Kansabanik", email = "devojyoti96@gmail.com" },
]
requires-python = ">=3"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent"
]
dependencies = [
    "aiohappyeyeballs==2.6.2",
    "aiohttp==3.13.5",
    "aiosignal==1.4.0",
    "astropy==6.1.4",
    "astropy-iers-data==0.2026.5.25.1.14.13",
    "asttokens==3.0.1",
    "async-timeout==5.0.1",
    "attrs==26.1.0",
    "certifi==2026.5.20",
    "charset-normalizer==3.4.7",
    "cycler==0.12.1",
    "decorator==5.3.1",
    "exceptiongroup==1.3.1",
    "executing==2.2.1",
    "fonttools==4.63.0",
    "frozenlist==1.8.0",
    "idna==3.17",
    "jedi==0.20.0",
    "kiwisolver==1.5.0",
    "matplotlib==3.5.2",
    "matplotlib-inline==0.1.7",
    "multidict==6.7.1",
    "numpy==1.26.4",
    "packaging==26.0",
    "parfive==2.3.1",
    "parso==0.8.7",
    "pexpect==4.9.0",
    "pillow==12.2.0",
    "prompt_toolkit==3.0.52",
    "propcache==0.5.2",
    "psutil==7.2.2",
    "ptyprocess==0.7.0",
    "pure_eval==0.2.3",
    "pyerfa==2.0.1.5",
    "pyfiglet==1.0.4",
    "Pygments==2.20.0",
    "pyparsing==3.3.2",
    "python-dateutil==2.9.0.post0",
    "PyYAML==6.0.1",
    "requests==2.34.2",
    "six==1.17.0",
    "stack-data==0.6.3",
    "tqdm==4.67.3",
    "traitlets==5.15.0",
    "typing_extensions==4.15.0",
    "udocker==1.3.17",
    "urllib3==2.7.0",
    "wcwidth==0.7.0",
    "yarl==1.24.2",
]
urls = { "Homepage" = "https://github.com/devojyoti96/aNKflag" }

[project.optional-dependencies]
dev = [
    "sphinx>=7.2.6",
    "furo>=2024.5.6",                      
    "sphinx_rtd_theme>=2.0.0",             
    "sphinx-autodoc-typehints>=2.0.0",
    "sphinx-copybutton>=0.5.2",
    "sphinxcontrib-programoutput>=0.17",
    "sphinx-togglebutton>=0.3.2",
    "myst-parser>=2.0.0",
    "sphinxcontrib-apidoc>=0.4.0",
    "sphinx-automodapi>=0.15.0",
    "numpydoc>=1.6.0",
    "sphinxcontrib-mermaid>=0.9.2",
    "graphviz>=0.20.3",                    
    "sphinx-autobuild>=2021.3.14",
    "pytest==8.3.3",
    "pytest-mock>=3.14.0",
    "ruff",
]


# Console scripts entry points
[project.scripts]
run-ankflag = "ankflag.scripts.runank:cli"

[tool.setuptools]
packages = [
    "ankflag",
    "ankflag.utils",
    "ankflag.scripts",
    "ankflag.data"
]
include-package-data = true

[tool.setuptools.package-data]
"ankflag.data" = ["ank.yml"]



