[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ankflag"
version = "3.0.6"
description = "A package to perform RFI flagging of radio interferometric data"
readme = { file = "README.md", content-type = "text/markdown" }
license = "MIT"
authors = [
    { name = "Apurba Bera", email = "apurba7777@gmail.com " },
    { name = "Devojyoti Kansabanik", email = "devojyoti96@gmail.com" },
]
requires-python = ">=3"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent"
]
dependencies = [
    "numpy>=1.26.4",
    "astropy>=6.1.4",
    "matplotlib>=3.5.2",
    "requests>=2.32.3",
    "aiohttp>=3.10.10",
    "parfive>=2.1.0",
    "psutil>=5.9.8",
    "PyYAML>=6.0.1",
    "tqdm>=4.66.6",
    "pyfiglet>=1.0.4",
]
urls = { "Homepage" = "https://github.com/devojyoti96/aNKflag" }

[project.optional-dependencies]
dev = [
    "sphinx>=7.2.6",
    "furo>=2024.5.6",                      
    "sphinx_rtd_theme>=2.0.0",             
    "sphinx-autodoc-typehints>=2.0.0",
    "sphinx-copybutton>=0.5.2",
    "sphinxcontrib-programoutput>=0.17",
    "sphinx-togglebutton>=0.3.2",
    "myst-parser>=2.0.0",
    "sphinxcontrib-apidoc>=0.4.0",
    "sphinx-automodapi>=0.15.0",
    "numpydoc>=1.6.0",
    "sphinxcontrib-mermaid>=0.9.2",
    "graphviz>=0.20.3",                    
    "sphinx-autobuild>=2021.3.14",
    "pytest==8.3.3",
    "pytest-mock>=3.14.0",
    "ruff",
]


# Console scripts entry points
[project.scripts]
run-ankflag = "ankflag.scripts.runank:cli"

[tool.setuptools]
packages = [
    "ankflag",
    "ankflag.utils",
    "ankflag.scripts",
    "ankflag.data"
]
include-package-data = true

[tool.setuptools.package-data]
"ankflag.data" = ["ank.yml"]



